--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="section__text">
                 <p class="section__text__p1">Hello, we are</p>
                 <h1 class="title">ScaledSpace</h1>
-                <p class="section__text__p2">Revoultionizing Contrustion</p>
+                <p class="section__text__p2">Revolutionizing Construction</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2" onclick="location.href='./#blogs'"> Blogs</button>
                     <button class="btn btn-color-1" onclick="location.href='./#contact'"> Contact Info</button>
